--- a/Twitter.UI/Views/Shared/_Layout.cshtml
+++ b/Twitter.UI/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <script src="~/js/signup.js" asp-append-version="true"></script>
     <script src="~/js/review.js" asp-append-version="true"></script>
     <script src="~/js/deleteTweet.js" asp-append-version="true"></script>
+    <script src="~/js/interaction.js" asp-append-version="true"></script>
 
 
     @await RenderSectionAsync("Scripts", required: false)
