--- a/Twitter.UI/Views/Home/HomePage.cshtml
+++ b/Twitter.UI/Views/Home/HomePage.cshtml
@@ -15,62 +15,62 @@
 	<div class="col-xs-4 col-md-3">
 		<div class="container-fluid">
 			<div class="row" style="justify-content: space-evenly;">
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-brands fa-twitter fs-2 py-3" style="color: #1d9bf0;"></i>
 						<b><span id="left-side-bar-text">@Model.Name.ToUpper()</span></b>
 					</span>
 
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-solid fa-house fs-3 py-3"></i>
 						<span id="left-side-bar-text">Home</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-sharp fa-regular fa-hashtag fs-2 py-3"></i>
 						<span id="left-side-bar-text"> Explore</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-regular fa-bell fs-2 py-3"></i>
 						<span id="left-side-bar-text"> Notifications</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-regular fa-envelope fs-2 py-3"></i>
 						<span id="left-side-bar-text">Messages</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-solid fa-bars fs-2 py-3"></i>
 						<span id="left-side-bar-text"> Lists</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-regular fa-bookmark fs-2 py-3"></i>
 						<span id="left-side-bar-text">  Bookmarks</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-brands fa-square-twitter fs-2 py-3" style="color: #1d9bf0;"></i>
 						<span id="left-side-bar-text"> Twitter Blue</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-regular fa-user fs-2 py-3"></i>
 						<span id="left-side-bar-text"> Profile</span>
 					</span>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-solid fa-ellipsis fs-2 py-3"></i>
 						<span id="left-side-bar-text"> More</span>
@@ -79,7 +79,7 @@
 
 				@if (Model.UserRole == "admin")
 				{
-					<div class="col-12">
+					<div class="col-12 left-side-bar">
 						<span>
 							<i class="fa-solid fa-file-arrow-down fs-2 py-3"></i>
 							<a id="left-side-bar-text" style="text-decoration: none; color: #1d9bf0; font-weight: bold;"
@@ -87,7 +87,7 @@
 						</span>
 					</div>
 				}
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-regular fa-comment-dots fs-2 py-3"></i>
 						<a id="left-side-bar-text" style="text-decoration: none; color: #1d9bf0; font-weight: bold;"
