Like and Repost Organized

--- a/Twitter.UI/Views/Home/AllTweetPV.cshtml
+++ b/Twitter.UI/Views/Home/AllTweetPV.cshtml
@@ -5,6 +5,7 @@
 	Layout = null;
 	ViewData["Title"] = "Home Page";
 	List<InteractionDto> likes = ViewBag.Like as List<InteractionDto>;
+	List<InteractionDto> reposts = ViewBag.Repost as List<InteractionDto>;
 }
 @if (ViewBag.Tweets != null)
 {
@@ -60,13 +61,37 @@
 						<br />
 						<div class="col-12 m-2">
 							<div class="row" style="justify-content: space-between; align-items: flex-end;">
-								<div class="col-5">
+								<div class="col-12">
 									<div class="row" style="flex-flow: row;">
 										<div class="col-2">
 											<span><i class="fa-regular fa-comment fs-5 py-1" style="color: rgb(83, 100, 113);"></i></span>
 										</div>
 										<div class="col-2">
-											<span><i class="fa-solid fa-retweet fs-5 py-1" style="color: rgb(83, 100, 113);"></i></span>
+											@if (ViewBag.Repost.Count == 0)
+											{
+												<span>
+													<i class="fa-solid fa-retweet fs-5 py-1" style="color: rgb(83, 100, 113);"
+													   onclick="interaction.repost('@Context.Session.GetInt32("CurrentUserid")', '@ViewBag.Tweets[item].TweetId')"></i>
+												</span>
+											}
+											else
+											{
+												if (reposts.Any(reposts => reposts.TweetId == ViewBag.Tweets[item].TweetId)) //giriş yapan kullanıcı o tweeti repostladıysa
+												{
+													<span>
+														<i class="fa-solid fa-retweet fs-5 py-1" style="color: rgb(0, 186, 124);"
+														   onclick="interaction.unrepost('@Context.Session.GetInt32("CurrentUserid")', '@ViewBag.Tweets[item].TweetId')"></i>
+													</span>
+												}
+												else //repostlamadıysa
+												{
+													<span>
+														<i class="fa-solid fa-retweet fs-5 py-1" style="color: rgb(83, 100, 113);"
+														   onclick="interaction.repost('@Context.Session.GetInt32("CurrentUserid")', '@ViewBag.Tweets[item].TweetId')"></i>
+													</span>
+												}
+
+											}
 										</div>
 										<div class="col-2">
 											@if (ViewBag.Like.Count == 0)
@@ -77,11 +102,11 @@
 												</span>
 											}
 											else
-											{//TODO: tüm logic
+											{
 												if (likes.Any(like => like.TweetId == ViewBag.Tweets[item].TweetId)) //giriş yapan kullanıcı o tweeti beğendiyse
 												{
 													<span>
-														<i class="fa-solid fa-heart fs-5 py-1" style="color: red;"
+														<i class="fa-solid fa-heart fs-5 py-1" style="color: rgb(249,24, 128);"
 														   onclick="interaction.unlike('@Context.Session.GetInt32("CurrentUserid")', '@ViewBag.Tweets[item].TweetId')"></i>
 													</span>
 												}
@@ -96,9 +121,7 @@
 											}
 
 										</div>
-										<div class="col-2">
-											<span><i class="fa-solid fa-face-smile fs-5 py-1" style="color: rgb(83, 100, 113);"></i></span>
-										</div>
+
 										<div class="col-2">
 											<span><i class="fa-solid fa-arrow-up-from-bracket fs-5 py-1" style="color: rgb(83, 100, 113);"></i></span>
 										</div>
