--- a/Twitter.UI/Views/Home/HomePage.cshtml
+++ b/Twitter.UI/Views/Home/HomePage.cshtml
@@ -97,7 +97,7 @@
 				<div class="col-12">
 					<button class="btn rounded-pill fs-4 pt-1 px-5 m-3" type="button" id="tweet">Tweet</button>
 				</div>
-				<div class="col-12">
+				<div class="col-12 left-side-bar">
 					<i class="fa-solid fa-arrow-right-from-bracket" style="color: #842029;margin: 3%;"></i>
 					<a style="text-decoration: none; color: #842029; font-weight: bold;margin: 3%;" data-toggle="tab" href="/Home/Logout">Log Out</a>
 				</div>
