--- a/Twitter.UI/Views/Home/FollowPV.cshtml
+++ b/Twitter.UI/Views/Home/FollowPV.cshtml
@@ -16,7 +16,7 @@
 			{
 				if (users.UserId != Context.Session.GetInt32("CurrentUserid"))
 				{
-					<div class="profile">
+					<div class="profile profileHover">
 						<div class="profile-info" style="font-size:95%">
 							<b><span class="display-name">@users.Name</span></b>
 							<span class="username">@users.Username</span>
