--- a/Twitter.UI/Views/Home/HomePage.cshtml
+++ b/Twitter.UI/Views/Home/HomePage.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row container-fluid container-md">
 	<!-- left side bar (xs is for phone grid) -->
-	<div class="col-xs-4 col-md-3">
+	<div class="col-xs-4 col-md-3" style="width: 20%;">
 		<div class="container-fluid">
 			<div class="row" style="justify-content: space-evenly;">
 				<div class="col-12 left-side-bar">
