--- a/Twitter.UI/Views/Home/HomePage.cshtml
+++ b/Twitter.UI/Views/Home/HomePage.cshtml
@@ -18,7 +18,7 @@
 				<div class="col-12 left-side-bar">
 					<span>
 						<i class="fa-brands fa-twitter fs-2 py-3" style="color: #1d9bf0;"></i>
-						<b><span id="left-side-bar-text">@Model.Name.ToUpper()</span></b>
+						<b><span id="left-side-bar-text" style="font-family: font-family: twitterchirp, -apple-system, blinkmacsystemfont, segoe ui, roboto, helvetica, arial, sans-serif;">@Model.Name.ToUpper()</span></b>
 					</span>
 
 				</div>
